# i1-main

./: .claude_consciousness.m8  2026-02-18-011951-implement-the-following-plan.txt  CLAUDE.md  Cargo.toml  README.md
blksh/se/: GEOBLOCK-PACKAGE.txt  GEOBLOCK-README.md  ban_as_numbers.sh  ban_ips.sh  geoblock-quick-status.sh  geoblock-setup.sh  test-geoblock.sh  unban_as_numbers.sh  unban_ips.sh
crates/i1-audit/: Cargo.toml
crates/i1-audit/src/: error.rs  hash.rs  lib.rs  qr.rs  verify.rs
crates/i1-audit/src/consensus/: compare.rs  mod.rs  query.rs
crates/i1-audit/src/discovery/: binaries.rs  certs.rs  mod.rs  processes.rs
crates/i1-audit/src/encoding/: dns_names.rs  mod.rs  txt_audit.rs
crates/i1-audit/src/scoring/: binary_trust.rs  cert_trust.rs  mod.rs  weights.rs
crates/i1-audit/src/types/: binary.rs  cert.rs  mod.rs  process.rs  snapshot.rs  trust.rs
crates/i1-ca/src/: intermediate.rs  lib.rs
crates/i1-censys/src/: lib.rs
crates/i1-cli/src/cli/: args.rs  mod.rs
crates/i1-cli/src/cli/commands/: audit.rs  count.rs  defend.rs  host.rs  mod.rs  search.rs  threat.rs
crates/i1-honeypot/src/: card.rs
crates/i1-recon/src/: enrichment.rs
crates/i1-srv/: Cargo.toml
crates/i1-srv/src/: config.rs  error.rs  lib.rs  server.rs
crates/i1-srv/src/authority/: mod.rs  threat_authority.rs  ttl_policy.rs  zone_builder.rs
crates/i1-srv/src/encoding/: dnsbl.rs  mod.rs  signal.rs  txt_intel.rs
crates/i1-srv/src/node/: identity.rs  mod.rs  registration.rs
crates/i1-srv/src/sync/: collector.rs  gossip.rs  mod.rs
crates/i1-srv/src/trust/: mesh.rs  mod.rs  ttl_monitor.rs
crates/shodan/: Cargo.toml
crates/shodan-cli/: Cargo.toml
crates/shodan-cli/src/: lib.rs  main.rs
crates/shodan-cli/src/cli/: args.rs  mod.rs
crates/shodan-cli/src/cli/commands/: account.rs  alert.rs  config.rs  count.rs  defend.rs  dns.rs  host.rs  mod.rs  myip.rs  scan.rs  search.rs  shell.rs
crates/shodan-cli/src/config/: mod.rs
crates/shodan-cli/src/defend/: mod.rs
crates/shodan-cli/src/education/: mod.rs
crates/shodan-cli/src/interactive/: mod.rs
crates/shodan-cli/src/output/: mod.rs
crates/shodan-client/: Cargo.toml
crates/shodan-client/src/: client.rs  config.rs  lib.rs
crates/shodan-client/src/api/: account.rs  alert.rs  bulk.rs  directory.rs  dns.rs  mod.rs  notifier.rs  org.rs  scan.rs  search.rs  tools.rs
crates/shodan-core/: Cargo.toml
crates/shodan-core/src/: error.rs  lib.rs
crates/shodan-core/src/types/: account.rs  alert.rs  common.rs  dns.rs  host.rs  mod.rs  notifier.rs  scan.rs  search.rs
crates/shodan-recon/: Cargo.toml
crates/shodan-recon/src/: dns.rs  enrichment.rs  error.rs  lib.rs  scanner.rs  trace.rs  whois.rs  whois_servers.json
crates/shodan/src/: lib.rs
examples/: basic_search.rs  port_scan.rs
what/: project.yml
