[package]
name = "shodan-cli"
description = "Educational command-line interface for Shodan.io with defensive tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["shodan", "security", "cli", "osint", "firewall"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "showdi1"
path = "src/main.rs"

[features]
default = ["rustls"]
rustls = ["shodan/rustls"]
native-tls = ["shodan/native-tls"]
recon = ["shodan/full-recon"]

[dependencies]
# Internal crates
shodan = { path = "../shodan" }
shodan-core = { path = "../shodan-core" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "color"] }

# Interactive mode
rustyline = { version = "14", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Output formatting
indicatif = { version = "0.17", features = ["tokio"] }
tabled = { version = "0.16", features = ["ansi"] }
console = "0.15"
colored = "2.1"

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.3"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Configuration
directories = "5.0"
toml = "0.8"

# Date/time
chrono = { workspace = true }

# Network utilities
reqwest = { workspace = true, features = ["rustls-tls"] }

# Misc
open = "5.3"
shellexpand = "3.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[lints]
workspace = true
